# LearningOpengles

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: recording.json  test1.vsh  test_shader.glsl
app/src/main/assets/shader/: fragment_shader.glsl  vertex_shader.glsl  video_fragment_shader.glsl  video_vertex_shader.glsl
app/src/main/java/com/: H2O.java
app/src/main/res/drawable/: custom_toast_bg.xml
app/src/main/res/layout/: activity_audio_record.xml  activity_camera.xml  activity_camera2.xml  activity_data_source.xml  activity_keyboard.xml  activity_main.xml  activity_media_projection.xml  activity_opengl_learn.xml  activity_player.xml  activity_rv.xml  activity_scale.xml  activity_surface_view.xml  activity_text.xml  activity_view.xml  child_view.xml  content_keyboard.xml  content_player.xml  content_scale.xml  content_surface_view.xml  content_view.xml  custom_toast.xml  fragment_first3.xml  fragment_first_test.xml  fragment_first_test_motion_image.xml  group_view.xml  item.xml  motion_layout.xml  package_list_view.xml  permission_dialog.xml  test.xml  test1.xml  (+2 more)
gradle/wrapper/: gradle-wrapper.properties
livevideo/: CMakeLists.txt  build.gradle
livevideo/src/androidTest/java/com/example/livevideo/: ExampleInstrumentedTest.kt
livevideo/src/main/: AndroidManifest.xml
livevideo/src/main/java/com/example/livevideo/: LivePusher.java  MainActivity.kt  Q.java
livevideo/src/main/res/values/: strings.xml
livevideo/src/test/java/com/example/livevideo/: ExampleUnitTest.kt
(+140 files in other folders)
